tests/reference/asr-def_func_03-58ad7c5.stderr
semantic error: Number of arguments does not match in the function call
 --> tests/errors/def_func_03.py:5:1
  |
5 | func_03(1)
  | ^^^^^^^^^^ missing 1 required arguments : 'y'
